# en-vi-translation

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml  tag.yml
apps/api/: pyproject.toml
apps/api/src/polyglot_gateway/api/: app.py
apps/api/src/polyglot_gateway/core/: __init__.py  metrics.py  settings.py
apps/api/src/polyglot_gateway/inference/: __init__.py  custom.py  registry.py  triton.py  vllm.py
apps/api/src/polyglot_gateway/worker/: celery_app.py  tasks.py
apps/api/tests/: conftest.py
apps/api/tests/api/: conftest.py  test_jobs.py  test_translate.py
apps/ui/: Dockerfile  pyproject.toml
apps/ui/src/polyglot_ui/: app.py
configs/: models.yaml  services.yaml
data/tests/: en2vi.txt  vi2en.txt
docker/: app.Dockerfile  prometheus.yml  promtail.yml  triton.Dockerfile  ui.Dockerfile
docker/grafana/provisioning/dashboards/: envit5-app.json  envit5-logs.json  node-exporter-full.json  nvidia-dcgm-exporter.json  triton-inference-server.json
docker/traefik/: traefik.yml
docker/traefik/dynamic/: middlewares.yml
docs/: REQUIREMENTS.md
inference/custom/example_service/: Dockerfile  README.md  main.py
inference/triton/: Dockerfile
inference/triton/model_repository/translator_en_vi/: config.pbtxt
inference/triton/model_repository/translator_vi_en/: config.pbtxt
inference/triton/scripts/: export_models.py  smoke_test.py
inference/vllm/config/: README.md
infra/: docker-compose.prod.yml  docker-compose.yml
infra/compose/: docker-compose.yml
infra/observability/: prometheus.yml  promtail.yml
infra/observability/grafana/provisioning/dashboards/: nvidia-dcgm-exporter.json  polyglot-app.json  polyglot-logs.json
infra/traefik/: traefik.yml
model_repository/translator_en_vi/: config.pbtxt
model_repository/translator_en_vi/1/: model.py
model_repository/translator_vi_en/: config.pbtxt
model_repository/translator_vi_en/1/: model.py
scripts/: app_stresstest.py  export_models.py  smoke_test.py  stresstest.py
services/gateway/: pyproject.toml
services/gateway/src/polyglot_gateway/api/: app.py  models.py
services/gateway/src/polyglot_gateway/core/: settings.py
services/gateway/src/polyglot_gateway/worker/: tasks.py
services/gateway/src/polyglot_gateway/worker/backends/: __init__.py  base.py  registry.py  triton.py  vllm.py
services/serving/triton/model_repository/translator_vi_en/: config.pbtxt
src/envit5/: __init__.py
src/envit5/api/: app.py  models.py
src/envit5/core/: __init__.py  metrics.py  settings.py
src/envit5/ui/: app.py
src/envit5/worker/: celery_app.py  chunker.py  tasks.py  triton_client.py
tests/: conftest.py
tests/api/: conftest.py  test_jobs.py  test_translate.py
