[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envit5"
version = "0.1.0"
description = "EN<->VI Neural Machine Translation served on Triton Inference Server with a Celery/Redis queue"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
# Heavy ML deps, only needed to export HF checkpoints to ONNX.
# Prefer running the export inside the Triton image (see docker/triton.Dockerfile),
# which already has a compatible Python. Install locally only on Python 3.10-3.12.
export = [
    "transformers>=4.40,<5",
    "optimum[onnxruntime]>=1.20",
    "torch",
    "sentencepiece>=0.1.99",
    "sacremoses>=0.1.1",
]
# Client deps for talking to Triton directly (smoke/stress scripts and the Celery worker).
client = [
    "tritonclient[http]>=2.40",
    "numpy>=1.24",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "py3langid>=0.2",
    "prometheus-client>=0.20",
]
worker = [
    "celery[redis]>=5.3",
    "redis>=5.0",
    "tritonclient[http]>=2.40",
    "numpy>=1.24",
    "prometheus-client>=0.20",
]
dev = [
    "envit5[api,worker,client]",
    "ruff>=0.4",
    "pylint>=3.2",
    "pytest>=8",
    "httpx>=0.27",
]
# Quality-evaluation deps: load HF datasets + compute BLEU score.
eval = [
    "datasets>=2.18",
    "sacrebleu>=2.4",
    "tritonclient[http]>=2.40",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pylint.main]
py-version = "3.10"
jobs = 0  # auto-detect CPU count
recursive = true

[tool.pylint."messages control"]
# Disable checks covered by ruff or irrelevant to this project
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "fixme",
    "import-error",            # optional deps not always installed
    "no-name-in-module",       # same reason
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10
max-attributes = 10

[tool.pylint.similarities]
min-similarity-lines = 10
ignore-imports = true
