[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyglot-ui"
version = "0.1.0"
description = "Gradio demo UI for the EN↔VI translation platform"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "gradio>=4.36",
    "requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["src"]
